[gd_scene load_steps=5 format=3 uid="uid://blp0ee2kt5j0a"]

[ext_resource type="Script" path="res://trainstation_light_game_node.gd" id="1_epy3j"]
[ext_resource type="FontFile" uid="uid://dd7wuh3vhdjhu" path="res://Assets/Fonts/Rosarivo/Rosarivo-Regular.ttf" id="2_qhjy8"]
[ext_resource type="AudioStream" uid="uid://ceiuwfypoljw7" path="res://Assets/Sound/SFX/PowerUp.mp3" id="3_reb2c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jwj6s"]
radius = 144.014

[node name="TrainstationLightGame Area" type="Area2D"]
script = ExtResource("1_epy3j")

[node name="Panel" type="Panel" parent="."]
z_index = 6
z_as_relative = false
offset_left = -102.0
offset_top = -64.0
offset_right = 105.0
offset_bottom = -24.0
metadata/_edit_use_anchors_ = true

[node name="interaction_label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -78.0
offset_top = -1.0
offset_right = 81.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_qhjy8")
theme_override_font_sizes/font_size = 25
text = "[E] to Interact"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jwj6s")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 4
offset_left = -4688.0
offset_top = -1488.0
offset_right = 3856.0
offset_bottom = 1552.0
color = Color(0.0470588, 0.0470588, 0.0470588, 0.482353)

[node name="LightsUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_reb2c")
volume_db = -6.668

[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
